dnl Process this file with autoconf to create configure.

AC_INIT

AC_CANONICAL_SYSTEM
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(libnetfilter_log, 0.0.16)

AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S

AC_SUBST(LIBTOOL_DEPS)

case $target in 
*-*-linux*) ;;
*) AC_MSG_ERROR([Linux only, dude!]);;
esac

dnl Dependencies
LIBNFNETLINK_REQUIRED=0.0.41
 
PKG_CHECK_MODULES(LIBNFNETLINK, libnfnetlink >= $LIBNFNETLINK_REQUIRED,,
	AC_MSG_ERROR(Cannot find libnfnetlink >= $LIBNFNETLINK_REQUIRED))

CFLAGS="$CFLAGS $LIBNFNETLINK_CFLAGS"
LIBNFLOG_LIBS="$LIBNFNETLINK_LIBS"
 
AC_SUBST(LIBNFLOG_LIBS)

dnl Output the makefile
AC_OUTPUT(Makefile src/Makefile include/Makefile include/libnetfilter_log/Makefile utils/Makefile libnetfilter_log.pc)

